Replication Set(升级版本副本集)/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: youyou
  labels:
    app: kubia
    tutu: tutu11
spec:
  containers:
    - name: youyou
      image: chaseleasy/pymain:v1
