Replication Set(升级版本副本集)/kubia-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  #external: 192.168.16.109
  selector:
    app: kubia
