Replication Set(升级版本副本集)/kubia-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: kubia
