Replication Set(升级版本副本集)/kubia-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubia
  labels:
    app: kubia-service
spec:
  # 端口映射
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 8443
      targetPort: 7443
    - name: tcp
      port: 6677
      targetPort: 80
  # 通过这个标签选择器 选择pod
  selector:
    app: kubia
