Replication Set(升级版本副本集)/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: kubia
spec:
  rules:
    - host: k8s.chunqiucp6.com
      http:
        paths:
        - path: /
          backend: 
            serviceName: kubia
            servicePort: 80
